--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     justify-content: center;
     text-align: center;
     flex-direction: column;
+    margin-top: -80px;
 }
 
 .image img{
@@ -39,11 +40,13 @@
 }
 
 #btn{
-    width: 105px;
-    margin-left: 111px;
+    width: 164px;
+    margin-left: 85px;
     border: none;
     background-color: #08f04e;
     color: aliceblue;
+    margin-top: 10px;
+    padding: 08px;
 }
 
 a{
