--- a/style.css
+++ b/style.css
@@ -53,6 +53,67 @@ a{
     text-decoration: none;
 }
 
+@media screen and (max-width: 650px) {
+    .container {
+      width: 100%;
+      background-color: #c6b671;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100vh;
+      height: 100vh;
+    }
 
+    .text{
+    width: 50vw;
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    margin-top: 10px;
+    }
 
+    #btn{
+        width: 164px;
+        margin-left: 50px;
+        border: none;
+        background-color: #f03608;
+        color: aliceblue;
+        margin-top: 10px;
+        padding: 08px;
+    }
+  }
+
+  @media screen and (max-width: 425px) {
+    .container {
+      width: 100%;
+      background-color: #aef444;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100vh;
+      height: 100vh;
+    }
+
+    .text{
+    width: 70vw;
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    margin-top: 10px;
+    }
+
+    #btn{
+        width: 174px;
+        margin-left: 35px;
+        border: none;
+        background-color: #f88366;
+        color: aliceblue;
+        margin-top: 10px;
+        padding: 08px;
+    }
+  }
 
